# Gas-Hydrates

./: .gitignore  INSTALL.md  README.md  equation_of_state.py  lol  occupancy.py  output.py  phase_equilibrium.py  pyproject.toml  read_files.py  utils.py  vdWP_FL.py
Shah_JPCC-2025_PaperCodes/Simulation/: Ar_PhaseEqm_Sim.py  Argon_EOS.py  N2_PhaseEqm_Sim.py
Simulation/: Ar_PhaseEqm_Sim.py  N2_PhaseEqm_Sim.py
src/vdwpfl/: equation_of_state.py  globe.py  occupancy.py  phase_equilibrium.py  read_files.py  vdWP_FL.py
vdWP-FL_Theory/: Ar_PhaseEqm_Theory.py  N2_PhaseEqm_Theory.py  Nitrogen_EOS.py  Occupancy_Calculations.py
vdwpfl/: __init__.py
